# IssueTracker

./: Cargo.toml  README.md
migrations/2022-11-15-220038_issues/: down.sql  up.sql
migrations/2022-12-13-160816_assigned_issues/: down.sql  up.sql
src/: connection.rs  main.rs  schema.rs
src/api/: handler.rs  mod.rs  models.rs  repository.rs  router.rs
