[package]
name = "issue-tracker"
version = "1.0.0"
authors = ["galfonso99 <gabrielalfonso99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_codegen = "0.4.5"
failure = {version = "0.1.8", features = ["derive"] }
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
serde = "1.0.116"
serde_derive = "1.0.147"
serde_json = "1.0.58"
env_logger = "0.5.12"
log = "0.4.6"
diesel-derive-enum = {version = "1.1.2", features = ["postgres"]}

[dependencies.rocket_contrib]
version = "*"
default-features = false
features=["json"]
